--- a/estilosRegistro.css
+++ b/estilosRegistro.css
@@ -1,33 +1,112 @@
-*{
-    margin: 0px;
-    padding: 0px;
+:root{
+    --colorTextos: black;
+}
+
+
+*,::before,::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body{
-    background: rgb(192, 185, 185);
+    font-family:Arial, Helvetica, sans-serif;
+    background: #2193b0;  /* fallback for old browsers */
+    background: linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    height: 1200px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
-#container{
-    width: 90%;
-    margin: 0px auto;
-}
-
-header{
-
-    height: 150px;
-    width: 100%;
-    margin: 0px;
+h1{
     text-align: center;
-    line-height: 150px;
+    font-weight: 700;    
 }
-
-#content{
-    float: left;
+form{
     background: white;
-    width: 90%;
-    height: 700px;
+    padding: 40px 0;
 }
 
-#nombre{
-    background: yellow;
+.form{
+    width: 100%;
+    margin: auto;
+
+}
+
+form .grupo{
+    position: relative;
+    margin: 40px;
+
+}
+
+input{
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
+    background: none;
+    color: white;
+    display:block;
+    width:100%;
+    border: none;
+    border-bottom: 1px solid var(--colorTextos);
+}
+input:focus{
+    outline:non;
+    color:black;
+}
+label{
+    color: var(--colorTextos);
+    font-size: 16px;
+    position: absolute;
+    left:5px;
+    top: 10px;
+    transition: 0.5s ease-in-out all;
+    pointer-events: none;
+}
+
+input:focus~label, 
+input:valid~label{
+    top: -20px;
+    font-size:16px;
+    color: rgb(98, 206, 98);
+}
+
+.barra{
+    position: relative;
+    display:block;
+    width:100%;
+}
+
+.barra::before{
+    content: "";
+    height: 2px;
+    width: 0%;
+    bottom: 0;
+    position: absolute;
+    background:  rgb(98, 206, 98);
+    transition: 0.3s ease width;
+    left:0px;
+}
+
+input:focus~.barra::before{
+    width: 100%;
+
+}
+
+button{
+    font-family: Arial, Helvetica, sans-serif;
+    background: #2193b0;  /* fallback for old browsers */
+    background: linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border: none;
+    display: block;
+    width: 80%;
+    margin:10px auto;
+    color:white;
+    height:40px;
+    font-size: 16px;
+    cursor:pointer;
 }
