--- a/inicio.css
+++ b/inicio.css
@@ -7,13 +7,13 @@ body{
 }
 .boton{
     display: inline-block;
-    background-color: cornflowerblue;
+    background-color: rgb(253, 66, 66);
     color: white;
     text-align: center;
     text-decoration: none;
     width: 70%;
     font-size: 3vw;
-    padding: 5% 10%;
+    padding: 3% 10%;
     border-radius: 8px;
         
 }
