--- a/estilosRegistro.css
+++ b/estilosRegistro.css
@@ -110,3 +110,11 @@ button{
     font-size: 16px;
     cursor:pointer;
 }
+
+.warnings{
+    width: 200px;
+    text-align: center;
+    margin: auto;
+    padding-top: 20px;
+    color: yellow;
+}
