--- a/estilosRegistro.css
+++ b/estilosRegistro.css
@@ -112,9 +112,10 @@ button{
 }
 
 .warnings{
-    width: 200px;
+    width: 300px;
+    font-size: 16px;
     text-align: center;
     margin: auto;
     padding-top: 20px;
-    color: yellow;
+    color: red;
 }
