--- a/app/inicio.css
+++ b/app/inicio.css
@@ -4,8 +4,9 @@ body{
     /*background: linear-gradient(to right, #6dd5ed, #2193b0);  
     background: linear-gradient(to right, #6dd5ed, #2193b0);
     */
+    /*
     background-image: url(https://josesilva.b-cdn.net/wp-content/uploads/2021/03/CUBRE-EL-SEGURO-DE-HOGAR-EL-TRASTERO-scaled.jpg);
-
+*/
     background-position: center center;
     background-size: auto;
    
