Cambios en el css para que no aparezca el placeholder de primeras

--- a/app/estilosRegistro.css
+++ b/app/estilosRegistro.css
@@ -1,5 +1,5 @@
 :root{
-    --colorTextos: red;
+    --colorTextos: black;
 }
 
 
@@ -29,6 +29,8 @@ h1{
 form{
     background: white;
     padding: 40px 0;
+    box-shadow: 0 0 6px 0 gray;
+    border-radius: 10px;
 }
 
 .form{
@@ -45,7 +47,6 @@ form .grupo{
 
 input{
     background: none;
-    color: white;
     font-size: 18px;
     padding: 10px 10px 10px 5px;
     display: block;
@@ -54,25 +55,43 @@ input{
     border-bottom: 1px solid var(--colorTextos);
 }
 input:focus{
-    outline:non;
-    color:yellow;
+    outline:none;
+    color:black;
 }
+
+input:not(:focus)::placeholder {
+    color: transparent;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+    background: transparent;
+    bottom: 0;
+    color: transparent;
+    cursor: pointer;
+    height: auto;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: auto;
+}
+
 label{
     color: var(--colorTextos);
-    font-size: 35px;
+    font-size: 16px;
     position: absolute;
     left:5px;
     top: 10px;
     transition: 0.5s ease-in-out all;
     pointer-events: none;
+    
 }
 
 
 
 input:focus~label, 
 input:valid~label{
-    top: -100px;
-    font-size:300px;
+    top: -14px;
+    font-size:12px;
     color: rgb(98, 206, 98);
 }
 
@@ -80,6 +99,7 @@ input:valid~label{
     position: relative;
     display:block;
     width:100%;
+    color: rgb(98, 206, 98);
 }
 
 .barra::before{
