--- a/app/contacto.css
+++ b/app/contacto.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+
+body{
+    background: #2193b0;
+}
 .container-form{
     width: 100%;
     max-width: 1100px;
@@ -13,6 +17,7 @@
     grid-template-columns: repeat(2,1fr);
     grid-gap: 50px;
     margin-top: 90px;
+    color: white;
 }
 .container-form h2{
     margin-bottom: 15px;
@@ -29,11 +34,11 @@
     text-decoration: none;
     width: 100%;
     margin-bottom: 15px;
-    color: black;
+    color: white;
     font-weight: 700;
 }
 .container-form a i{
-    color: orange;
+    color:white;
     margin-right: 10px;
 }
 .container-form form .campo, textarea{
@@ -51,17 +56,15 @@
     min-height: 140px;
     max-height: 150px;
 }
-.container-form .btn-enviar{
+.container-form .but-enviar{
     padding: 15px;
     font-size: 16px;
     border: none;
     outline: 0px;
-    background: orange;
-    color: white;
-    border-radius: 3px;
+    background: white;
+    color:#2193b0;
+    border-radius: 5px;
+    border-color: white;
     cursor: pointer;
     transition: all 300ms ease;
-}
-.container-form .btn-enviar:hover{
-    background: #e39403;
 }
