--- a/app/contacto.css
+++ b/app/contacto.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -10,6 +8,10 @@ body{
     background: #2193b0;
 }
 .container-form{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     width: 100%;
     max-width: 1100px;
     margin: auto;
@@ -20,15 +22,29 @@ body{
     color: white;
 }
 .container-form h2{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     margin-bottom: 15px;
     font-size: 35px
 }
 .container-form p{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     font-size: 17px;
     line-height: 1.6;
     margin-bottom: 30px;
+    margin-left: 30;
+    margin-right: 30;
 }
 .container-form a{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     font-size: 17px;
     display: inline-block;
     text-decoration: none;
@@ -38,10 +54,18 @@ body{
     font-weight: 700;
 }
 .container-form a i{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     color:white;
     margin-right: 10px;
 }
 .container-form form .campo, textarea{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     width: 100%;
     padding: 15px 10px;
     font-size: 16px;
@@ -51,12 +75,21 @@ body{
     outline: 0px;
 }
 .container-form form textarea{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     max-width: 530px;
     min-width: 530px;
     min-height: 140px;
     max-height: 150px;
 }
 .container-form .but-enviar{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+    margin-top: 10px;
     padding: 15px;
     font-size: 16px;
     border: none;
@@ -67,4 +100,59 @@ body{
     border-color: white;
     cursor: pointer;
     transition: all 300ms ease;
+}
+/*cabecera*/
+header{
+    margin-top: 50px;
+    width: cover;
+    border-radius: 5px 5px 5px 5px;
+    margin: auto auto;
+    height: 25px;
+    background-color: white;
+    vertical-align: center;
+    padding-top: 70px;
+    padding-bottom: 70px;
+
+}
+.texto{
+    font-size: 23px;
+    text-align: left;
+    margin-left: 30px;
+    
+    
+}
+.texto2{
+    font-size: 16px;
+    text-align: right;
+    margin-top: 0px;
+    margin-right: 30px;
+    float: right;
+    
+}
+.botonCabecera{
+    font-family: Arial, Helvetica, sans-serif;
+    background: #2193b0;  /* fallback for old browsers */
+    background: linear-gradient(to right, #6dd5ed, #2193b0);  
+    background: linear-gradient(to right, #6dd5ed, #2193b0); 
+    border: none;
+    padding: 8px 10px;
+    color:white;
+    font-size: 16px;
+    cursor:pointer;
+    border-radius: 8px;
+    text-decoration: none;
+    margin-right: 10px;
+    float: right;
+    
+}
+.botonCabecera::after{
+    display: block;
+    content: '';
+    border-bottom: solid 1px white;
+    padding-bottom: 1%;
+    transform: scaleX(0);
+    transition: transform 300ms ease-in-out;
+}
+.botonCabecera:hover::after{
+    transform: scaleX(1);
 }
