--- a/app/inicio.css
+++ b/app/inicio.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
+    
+    
+
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    /*font-family: Arial, Helvetica, sans-serif;*/
+    font-family: 'Open Sans', sans-serif;
     /*background: #2193b0;  /* fallback for old browsers */
     /*background: linear-gradient(to right, #6dd5ed, #2193b0);  
     background: linear-gradient(to right, #6dd5ed, #2193b0);
@@ -17,7 +23,7 @@ header{
     width: cover;
     border-radius: 5px 5px 5px 5px;
     margin: auto auto;
-    height: 10px;
+    height: 25px;
     background-color: white;
     
     padding-top: 70px;
