--- a/app/listado.css
+++ b/app/listado.css
@@ -63,3 +63,31 @@
     font-weight: bold;
     color: #009879;
 }
+.botonp{
+    font-family: Arial, Helvetica, sans-serif;
+    background: #2193b0;  /* fallback for old browsers */
+    background: linear-gradient(to right, #6dd5ed, #2193b0);  
+    background: linear-gradient(to right, #6dd5ed, #2193b0); 
+    border: none;
+    padding: 6px 8px;
+    color:white;
+    font-size: 14px;
+    cursor:pointer;
+    border-radius: 8px;
+    text-decoration: none;
+    margin-right: 0px;
+   
+    
+}
+/*.botonp::after{
+    display: block;
+    content: '';
+    border-bottom: solid 1px white;
+    padding-bottom: 1%;
+    transform: scaleX(0);
+    transition: transform 300ms ease-in-out;
+}
+.botonp:hover::after{
+    transform: scaleX(1);
+}
+*/
