--- a/app/inicio.css
+++ b/app/inicio.css
@@ -48,7 +48,7 @@ header{
     padding: 2% ;
     border-radius: 8px;
 }
-#iniciosesion{
+#form{
     text-align: center;
     align-items: center;
     border: 1px solid grey;
